versions/v2.13/modules/en/pages/cluster-deployment/configuration/rke2.adoc
= {rke2-product-name} Cluster Configuration Reference
ifeval::["{build-type}" != "srfa"]
:page-languages: [en, zh]
endif::[]
:revdate: 2025-12-10
:page-revdate: {revdate}
:page-community-path: reference-guides/cluster-configuration/rancher-server-configuration/rke2-cluster-configuration.adoc 
:page-product-path: cluster-deployment/configuration/rke2.adoc
ifeval::["{build-type}" != "community"]
:url-rke2-configuration: https://documentation.suse.com/cloudnative/rke2/latest/en/install/configuration.html
:url-rke2-basic-network-options: https://documentation.suse.com/cloudnative/rke2/latest/en/networking/basic_network_options.html
:url-rke2-coredns: https://documentation.suse.com/cloudnative/rke2/latest/en/networking/networking_services.html#_coredns
:url-rke2-ingress-controller: https://documentation.suse.com/cloudnative/rke2/latest/en/networking/networking_services.html#_ingress_controller
:url-rke2-automatically-deploying-manifests-and-helm-charts: https://documentation.suse.com/cloudnative/rke2/latest/en/add-ons/helm.html#_automatically_deploying_manifests_and_helm_charts
:url-rke2-linux-agent-config: https://documentation.suse.com/cloudnative/rke2/latest/en/reference/linux_agent_config.html
:url-rke2-creating-snapshots: https://documentation.suse.com/cloudnative/rke2/latest/en/backup_restore.html#_creating_snapshots
:url-rke2-dual-stack-configuration: https://documentation.suse.com/cloudnative/rke2/latest/en/networking/basic_network_options.html#_dual_stack_configuration
:url-rke2-ipv6-setup: https://documentation.suse.com/cloudnative/rke2/latest/en/networking/basic_network_options.html#_ipv6_setup
:url-rke2-containerd-registry-configuration: https://documentation.suse.com/cloudnative/rke2/latest/en/install/containerd_registry_configuration.html
:url-rke2-helm: https://documentation.suse.com/cloudnative/rke2/latest/en/add-ons/helm.html
:url-rke2-server-config: https://documentation.suse.com/cloudnative/rke2/latest/en/reference/server_config.html
:xref-arch-com-ds-cluster: xref:about-rancher/architecture/communicating-with-downstream-clusters.adoc
:xref-arch-rec: xref:about-rancher/architecture/recommendations.adoc
:xref-set-up-cloud-providers: xref:cluster-deployment/set-up-cloud-providers/set-up-cloud-providers.adoc
:xref-persistent-storage: xref:cluster-admin/manage-clusters/persistent-storage/manage-persistent-storage.adoc
:xref-ds-backup-restore: xref:cluster-admin/backups-and-restore/backups-and-restore.adoc
:xref-psact: xref:security/psact.adoc
:xref-azure-machine-configuration: xref:cluster-deployment/infra-providers/azure/machine-configuration.adoc
:xref-compliance-scans-howto: xref:security/compliance-scans/how-to.adoc
:xref-digitalocean-machine-configuration: xref:cluster-deployment/infra-providers/digitalocean/machine-configuration.adoc
:xref-aws-machine-configuration: xref:cluster-deployment/infra-providers/aws/machine-configuration.adoc
:xref-about-rancher-agents: xref:cluster-deployment/about-rancher-agents.adoc
:xref-node-reqs: xref:cluster-deployment/node-requirements.adoc
:xref-gce-machine-configuration: xref:cluster-deployment/infra-providers/gce/machine-configuration.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:url-rke2-configuration: https://docs.rke2.io/install/configuration
:url-rke2-basic-network-options: https://docs.rke2.io/networking/basic_network_options
:url-rke2-coredns: https://docs.rke2.io/networking/networking_services#coredns
:url-rke2-ingress-controller: https://docs.rke2.io/networking/networking_services#ingress-controller
:url-rke2-automatically-deploying-manifests-and-helm-charts: https://docs.rke2.io/add-ons/helm#automatically-deploying-manifests-and-helm-charts
:url-rke2-linux-agent-config: https://docs.rke2.io/reference/linux_agent_config
:url-rke2-creating-snapshots: https://docs.rke2.io/datastore/backup_restore#creating-snapshots
:url-rke2-dual-stack-configuration: https://docs.rke2.io/networking/basic_network_options#dual-stack-configuration
:url-rke2-ipv6-setup: https://docs.rke2.io/networking/basic_network_options#ipv6-setup
:url-rke2-containerd-registry-configuration: https://docs.rke2.io/install/private_registry
:url-rke2-helm: https://docs.rke2.io/add-ons/helm
:url-rke2-server-config: https://docs.rke2.io/reference/server_config
:xref-arch-com-ds-cluster: xref:reference-guides/rancher-manager-architecture/communicating-with-downstream-user-clusters.adoc
:xref-arch-rec: xref:reference-guides/rancher-manager-architecture/architecture-recommendations.adoc
:xref-set-up-cloud-providers: xref:how-to-guides/new-user-guides/kubernetes-clusters-in-rancher-setup/set-up-cloud-providers/index.adoc
:xref-persistent-storage: xref:how-to-guides/new-user-guides/manage-clusters/create-kubernetes-persistent-storage/index.adoc
:xref-ds-backup-restore: xref:getting-started/installation-and-upgrade/upgrade-and-roll-back-kubernetes.adoc
:xref-psact: xref:how-to-guides/new-user-guides/authentication-permissions-and-global-configuration/psa-config-templates.adoc
:xref-azure-machine-configuration: xref:reference-guides/cluster-configuration/downstream-cluster-configuration/machine-configuration/azure.adoc
:xref-compliance-scans-howto: xref:how-to-guides/advanced-user-guides/compliance-scan-guides/index.adoc
:xref-digitalocean-machine-configuration: xref:reference-guides/cluster-configuration/downstream-cluster-configuration/machine-configuration/digitalocean.adoc
:xref-aws-machine-configuration: xref:reference-guides/cluster-configuration/downstream-cluster-configuration/machine-configuration/amazon-ec2.adoc
:xref-about-rancher-agents: xref:how-to-guides/new-user-guides/launch-kubernetes-with-rancher/about-rancher-agents.adoc
:xref-node-reqs: xref:how-to-guides/new-user-guides/kubernetes-clusters-in-rancher-setup/node-requirements-for-rancher-managed-clusters.adoc
:xref-gce-machine-configuration: xref:reference-guides/cluster-configuration/downstream-cluster-configuration/machine-configuration/google-gce.adoc
endif::[]

This section covers the configuration options that are available in Rancher for a new or existing RKE2 Kubernetes cluster.

== Overview

You can configure the Kubernetes options in one of the two following ways:

* <<_configuration_options_in_the_rancher_ui,Rancher UI>>: Use the Rancher UI to select options that are commonly customized when setting up a Kubernetes cluster.
* <<_cluster_config_file_reference,Cluster Config File>>: Instead of using the Rancher UI to choose Kubernetes options for the cluster, advanced users can create an RKE2 config file. Using a config file allows you to set many additional {url-rke2-configuration}[options] available for an RKE2 installation.

== Editing Clusters in the Rancher UI

The Rancher UI provides two ways to edit a cluster:

. With a form.
. With YAML.

=== Editing Clusters with a Form

The form covers the most frequently needed options for clusters.

To edit your cluster,

. Click *☰ > Cluster Management*.
. Go to the cluster you want to configure and click *⋮ > Edit Config*.

=== Editing Clusters in YAML

For a complete reference of configurable options for RKE2 clusters in YAML, see the {url-rke2-configuration}[RKE2 documentation].

To edit your cluster in YAML:

. Click *☰ > Cluster Management*.
. Go to the cluster you want to configure and click *⋮ > Edit as YAML*.
. Edit the RKE options under the `rkeConfig` directive.

== Configuration Options in the Rancher UI

=== Machine Pool Configuration

ifeval::["{build-type}" != "srfa"]
This subsection covers generic machine pool configurations. For specific infrastructure provider configurations, refer to the following:

* {xref-azure-machine-configuration}[Azure]
* {xref-digitalocean-machine-configuration}[DigitalOcean]
* {xref-aws-machine-configuration}[Amazon EC2]
* {xref-gce-machine-configuration}[Google GCE]
endif::[]
ifeval::["{build-type}" == "srfa"]
This subsection covers generic machine pool configurations. For specific EC2 infrastructure provider configurations, refer to the following:

* {xref-aws-machine-configuration}[EC2]
endif::[]

[discrete]
===== Pool Name

The name of the machine pool.

[discrete]
===== Machine Count

The number of machines in the pool.

[discrete]
===== Roles

Option to assign etcd, control plane, and worker roles to nodes.

==== Advanced

===== Auto Replace

The amount of time nodes can be unreachable before they are automatically deleted and replaced.

===== Drain Before Delete

Enables draining nodes by evicting all pods before the node is deleted.

===== Kubernetes Node Labels

Add https://kubernetes.io/docs/concepts/overview/working-with-objects/labels/[labels] to nodes to help with organization and object selection.

For details on label syntax requirements, see the https://kubernetes.io/docs/concepts/overview/working-with-objects/labels/#syntax-and-character-set[Kubernetes documentation.]

===== Taints

Add https://kubernetes.io/docs/concepts/configuration/taint-and-toleration/[taints] to nodes, to prevent pods from being scheduled to or executed on the nodes, unless the pods have matching tolerations.

=== Cluster Configuration

==== Basics

===== Kubernetes Version

The version of Kubernetes installed on your cluster nodes.

For details on upgrading or rolling back Kubernetes, refer to {xref-ds-backup-restore}[Upgrading Kubernetes].

===== Container Network Provider

The https://kubernetes.io/docs/concepts/cluster-administration/networking/[Network Provider] that the cluster uses.

[CAUTION]
====

After you launch the cluster, you cannot change your network provider. Therefore, choose which network provider you want to use carefully, as Kubernetes doesn't allow switching between network providers. Once a cluster is created with a network provider, changing network providers would require you to tear down the entire cluster and all its applications.
====


Out of the box, Rancher is compatible with the following network providers:

* https://github.com/projectcalico/canal[Canal]
* https://cilium.io/[Cilium]*
* https://docs.projectcalico.org/v3.11/introduction/[Calico]
* https://github.com/flannel-io/flannel[Flannel]
* https://github.com/k8snetworkplumbingwg/multus-cni[Multus]

* When using <<_project_network_isolation,project network isolation>> in the xref:faq/container-network-interface-providers.adoc#_cilium[Cilium CNI], it is possible to enable cross-node ingress routing. Click the xref:faq/container-network-interface-providers.adoc#_ingress_routing_across_nodes_in_cilium[CNI provider docs] to learn more.

For more details on the different networking providers and how to configure them, please view our {url-rke2-basic-network-options}[RKE2 documentation].

[CAUTION]
====
When using `cilium` or `multus,cilium` as your container network interface provider, ensure the *Enable IPv6 Support* option is also enabled.
====

===== Cloud Provider

You can configure a {xref-set-up-cloud-providers}[Kubernetes cloud provider]. If you want to use dynamically provisioned {xref-persistent-storage}[volumes and storage] in Kubernetes, typically you must select the specific cloud provider in order to use it. For example, if you want to use Amazon EBS, you would need to select the `aws` cloud provider.

[NOTE]
====

If the cloud provider you want to use is not listed as an option, you will need to use the <<_cluster_config_file_reference,config file option>> to configure the cloud provider. Please reference https://rancher.com/docs/rke/latest/en/config-options/cloud-providers/[this documentation] on how to configure the cloud provider.
====

===== Pod Security Admission Configuration Template

The default {xref-psact}[pod security admission configuration template] for the cluster.

===== Worker Compliance Profile

Select a {xref-compliance-scans-howto}[compliance benchmark] to validate the system configuration against.

===== Project Network Isolation

If your network provider allows project network isolation, you can choose whether to enable or disable inter-project communication.

Project network isolation is available if you are using any RKE2 network plugin that supports the enforcement of Kubernetes network policies, such as Canal.

===== CoreDNS

By default, https://coredns.io/[CoreDNS] is installed as the default DNS provider. If CoreDNS is not installed, an alternate DNS provider must be installed yourself. Refer to the {url-rke2-coredns}[RKE2 documentation] for additional CoreDNS configurations.

===== NGINX Ingress

If you want to publish your applications in a high-availability configuration, and you're hosting your nodes with a cloud-provider that doesn't have a native load-balancing feature, enable this option to use NGINX Ingress within the cluster. Refer to the {url-rke2-ingress-controller}[RKE2 documentation] for additional configuration options.

Refer to the {url-rke2-ingress-controller}[RKE2 documentation] for additional configuration options.

===== Metrics Server

Option to enable or disable https://rancher.com/docs/rke/latest/en/config-options/add-ons/metrics-server/[Metrics Server].

Each cloud provider capable of launching a cluster using RKE2 can collect metrics and monitor for your cluster nodes. Enable this option to view your node metrics from your cloud provider's portal.

==== Add-On Config

Additional Kubernetes manifests, managed as an https://kubernetes.io/docs/concepts/cluster-administration/addons/[Add-on], to apply to the cluster on startup. Refer to the {url-rke2-automatically-deploying-manifests-and-helm-charts}[RKE2 documentation] for details.

==== Agent Environment Vars

Option to set environment variables for {xref-about-rancher-agents}[Rancher agents]. The environment variables can be set using key value pairs. Refer to the {url-rke2-linux-agent-config}[RKE2 documentation] for more details.

==== etcd

===== Automatic Snapshots

Option to enable or disable recurring etcd snapshots. If enabled, users have the option to configure the frequency of snapshots. For details, refer to the {url-rke2-creating-snapshots}[RKE2 documentation]. Note that with RKE2, snapshots are stored on each etcd node. This varies from RKE1 which only stores one snapshot per cluster.

===== Metrics

Option to choose whether to expose etcd metrics to the public or only within the cluster.

==== Networking

===== Cluster CIDR

IPv4 and/or IPv6 network CIDRs to use for pod IPs (default: `10.42.0.0/16`).

Example values:

* IPv4-only: `10.42.0.0/16`
* IPv6-only: `2001:cafe:42::/56`
* Dual-stack: `10.42.0.0/16,2001:cafe:42::/56`

For additional requirements and limitations related to dual-stack or IPv6-only networking, see the following resources:

* {url-rke2-dual-stack-configuration}[RKE2 documentation: Dual-stack configuration]
* {url-rke2-ipv6-setup}[RKE2 documentation: IPv6-only setup]

[CAUTION]
====
* You must configure the Service CIDR when you first create the cluster. You cannot enable the Service CIDR on an existing cluster after it starts.
* When using `cilium` or `multus,cilium` as your container network interface provider, ensure the **Enable IPv6 Support** option is also enabled.
====

===== Service CIDR

IPv4/IPv6 network CIDRs to use for service IPs (default: `10.43.0.0/16`).

Example values:

* IPv4-only: `10.43.0.0/16`
* IPv6-only: `2001:cafe:43::/112`
* Dual-stack: `10.43.0.0/16,2001:cafe:43::/112`

For additional requirements and limitations related to dual-stack or IPv6-only networking, see the following resources:

* {url-rke2-dual-stack-configuration}[RKE2 documentation: Dual-stack configuration]
* {url-rke2-ipv6-setup}[RKE2 documentation: IPv6-only setup]

[CAUTION]
====
* You must configure the Service CIDR when you first create the cluster. You cannot enable the Service CIDR on an existing cluster after it starts.
* When using `cilium` or `multus,cilium` as your container network interface provider, ensure the **Enable IPv6 Support** option is also enabled.
====

===== Cluster DNS

IPv4 Cluster IP for coredns service. Should be in your service-cidr range (default: `10.43.0.10`).

===== Cluster Domain

Select the domain for the cluster. The default is `cluster.local`.

===== NodePort Service Port Range

Option to change the range of ports that can be used for https://kubernetes.io/docs/concepts/services-networking/service/#nodeport[NodePort services]. The default is `30000-32767`.

===== Truncate Hostnames

Option to truncate hostnames to 15 characters or fewer. You can only set this field during the initial creation of the cluster. You can't enable or disable the 15-character limit after cluster creation.

This setting only affects machine-provisioned clusters. Since custom clusters set hostnames during their own node creation process, which occurs outside of Rancher, this field doesn't restrict custom cluster hostname length.

Truncating hostnames in a cluster improves compatibility with Windows-based systems. Although Kubernetes allows hostnames up to 63 characters in length, systems that use NetBIOS restrict hostnames to 15 characters or fewer.

===== TLS Alternate Names

Add hostnames or IPv4/IPv6 addresses as Subject Alternative Names on the server TLS cert.

===== Stack Preference

Choose the networking stack for the cluster. This option affects:

* The address used for health and readiness probes of components such as Calico, etcd, kube-apiserver, kube-scheduler, kube-controller-manager, and kubelet.
* The server URL in the `authentication-token-webhook-config-file` for the Authorized Cluster Endpoint.
* The `advertise-client-urls` setting for etcd during snapshot restoration.

Options are `ipv4`, `ipv6`, `dual`:

* When set to `ipv4`, the cluster uses `127.0.0.1`
* When set to `ipv6`, the cluster uses `[::1]`
* When set to `dual`, the cluster uses `localhost`

The stack preference must match the cluster’s networking configuration:

* Set to `ipv4` for IPv4-only clusters
* Set to `ipv6` for IPv6-only clusters
* Set to `dual` for dual-stack clusters

[CAUTION]
====
Ensuring the loopback address configuration is correct is critical for successful cluster provisioning.
For more information, refer to the {xref-node-reqs}[Node Requirements] page.
====

===== Authorized Cluster Endpoint

Authorized Cluster Endpoint can be used to directly access the Kubernetes API server, without requiring communication through Rancher.

This is enabled by default in Rancher-launched Kubernetes clusters, using the IP of the node with the `controlplane` role and the default Kubernetes self signed certificates.

For more detail on how an authorized cluster endpoint works and why it is used, refer to the {xref-arch-com-ds-cluster}#_4_authorized_cluster_endpoint[architecture section.]

We recommend using a load balancer with the authorized cluster endpoint. For details, refer to the {xref-arch-rec}#_architecture_for_an_authorized_cluster_endpoint_ace[recommended architecture section.]

==== Registries

Select the image repository to pull Rancher images from. For more details and configuration options, see the {url-rke2-containerd-registry-configuration}[RKE2 documentation].

==== Upgrade Strategy

===== Control Plane Concurrency

Select how many nodes can be upgraded at the same time. Can be a fixed number or percentage.

===== Worker Concurrency

Select how many nodes can be upgraded at the same time. Can be a fixed number or percentage.

===== Drain Nodes (Control Plane)

Option to remove all pods from the node prior to upgrading.

===== Drain Nodes (Worker Nodes)

Option to remove all pods from the node prior to upgrading.

==== Advanced

Option to set kubelet options for different nodes. For available options, refer to the https://kubernetes.io/docs/reference/command-line-tools-reference/kubelet/[Kubernetes documentation].

== Cluster Config File Reference

Editing clusters in YAML allows you to set the {url-rke2-configuration}[options available] in an RKE2 installation, including those already listed in <<_configuration_options_in_the_rancher_ui,Configuration Options in the Rancher UI>>, as well as set Rancher-specific parameters.

.Example Cluster Config File Snippet
[%collapsible]
======

[,yaml]
----
apiVersion: provisioning.cattle.io/v1
kind: Cluster
spec:
  cloudCredentialSecretName: cattle-global-data:cc-s879v
  kubernetesVersion: v1.25.12+rke2r1
  localClusterAuthEndpoint: {}
  rkeConfig:
    additionalManifest: ""
    chartValues:
      rke2-calico: {}
    etcd:
      snapshotRetention: 5
      snapshotScheduleCron: 0 */5 * * *
    machineGlobalConfig:
      cni: calico
      disable-kube-proxy: false
      etcd-expose-metrics: false
      profile: null
      kube-apiserver-arg:
        - audit-policy-file=/etc/rancher/rke2/user-audit-policy.yaml
        - audit-log-path=/etc/rancher/rke2/user-audit.logs
    machinePools:
    - controlPlaneRole: true
      etcdRole: true
      machineConfigRef:
        kind: Amazonec2Config
        name: nc-test-pool1-pwl5h
      name: pool1
      quantity: 1
      unhealthyNodeTimeout: 0s
      workerRole: true
    machineSelectorConfig:
    - config:
        protect-kernel-defaults: false
    machineSelectorFiles:
      - fileSources:
          - configMap:
              name: ''
            secret:
              name: audit-policy
              items:
                - key: audit-policy
                  path: /etc/rancher/rke2/user-audit-policy.yaml
        machineLabelSelector:
          matchLabels:
            rke.cattle.io/control-plane-role: 'true'
    registries: {}
    upgradeStrategy:
      controlPlaneConcurrency: "1"
      controlPlaneDrainOptions:
        deleteEmptyDirData: true
        enabled: true
        gracePeriod: -1
        ignoreDaemonSets: true
        timeout: 120
      workerConcurrency: "1"
      workerDrainOptions:
        deleteEmptyDirData: true
        enabled: true
        gracePeriod: -1
        ignoreDaemonSets: true
        timeout: 120
----

======

=== additionalManifest

Specify additional manifests to deliver to the control plane nodes.

The value is a String, and will be placed at the path `/var/lib/rancher/rke2/server/manifests/rancher/addons.yaml` on target nodes.

Example:

[,yaml]
----
additionalManifest: |-
  apiVersion: v1
  kind: Namespace
  metadata:
    name: name-xxxx
----

[NOTE]
====

If you want to customize system charts, you should use the `chartValues` field as described below.

Alternatives, such as using a HelmChartConfig to customize the system charts via `additionalManifest`, can cause unexpected behavior, due to having multiple HelmChartConfigs for the same chart.
====


=== chartValues

Specify the values for the system charts installed by RKE2.

For more information about how RKE2 manges packaged components, please refer to {url-rke2-helm}[RKE2 documentation].

Example:

[,yaml]
----
chartValues:
    chart-name:
        key: value
----

=== machineGlobalConfig

Specify RKE2 configurations. Any configuration change made here will apply to every node. The configuration options available in the {url-rke2-server-config}[standalone version of RKE2] can be applied here.

Example:

[,yaml]
----
machineGlobalConfig:
    etcd-arg:
        - key1=value1
        - key2=value2
----

There are some configuration options that can't be changed when provisioning via Rancher:

* data-dir (folder to hold state), which defaults to `/var/lib/rancher/rke2`.

To make it easier to put files on nodes beforehand, Rancher expects the following values to be included in the configuration, while RKE2 expects the values to be entered as file paths:

* audit-policy-file
* cloud-provider-config
* private-registry

Rancher delivers the files to the path `/var/lib/rancher/rke2/etc/config-files/<option>` in target nodes, and sets the proper options in the RKE2 server.

Example:

[,yaml]
----
apiVersion: provisioning.cattle.io/v1
kind: Cluster
spec:
  rkeConfig:
    machineGlobalConfig:
      audit-policy-file:
        apiVersion: audit.k8s.io/v1
        kind: Policy
        rules:
        - level: RequestResponse
          resources:
          - group: ""
            resources:
            - pods
----

=== machineSelectorConfig

`machineSelectorConfig` is the same as <<_machineglobalconfig,`machineGlobalConfig`>> except that a <<_kubernetes_node_labels,label>> selector can be specified with the configuration. The configuration will only be applied to nodes that match the provided label selector.

Multiple `config` entries are allowed, each specifying their own `machineLabelSelector`. A user can specify `matchExpressions`, `matchLabels`, both, or neither. Omitting the `machineLabelSelector` section of this field has the same effect as putting the config in the `machineGlobalConfig` section.

Example:

[,yaml]
----
machineSelectorConfig
  - config:
      config-key: config-value
    machineLabelSelector:
      matchExpressions:
        - key: example-key
          operator: string # Valid operators are In, NotIn, Exists and DoesNotExist.
          values:
            - example-value1
            - example-value2
      matchLabels:
        key1: value1
        key2: value2
----

=== machineSelectorFiles

[NOTE]
====

This feature is available in Rancher v2.7.2 and later.
====


Deliver files to nodes, so that the files can be in place before initiating RKE2 server or agent processes.
The content of the file is retrieved from either a secret or a configmap. The target nodes are filtered by the `machineLabelSelector`.

Example :

[,yaml]
----
machineSelectorFiles:
  - fileSources:
      - secret:
          items:
            - key: example-key
              path: path-to-put-the-file-on-nodes
              permissions: 644 (optional)
              hash: base64-encoded-hash-of-the-content (optional)
          name: example-secret-name
    machineLabelSelector:
      matchExpressions:
        - key: example-key
          operator: string # Valid operators are In, NotIn, Exists and DoesNotExist.
          values:
            - example-value1
            - example-value2
      matchLabels:
        key1: value1
        key2: value2
  - fileSources:
      - configMap:
          items:
            - key: example-key
              path: path-to-put-the-file-on-nodes
              permissions: 644 (optional)
              hash: base64-encoded-hash-of-the-content (optional)
          name: example-configmap-name
    machineLabelSelector:
      matchExpressions:
        - key: example-key
          operator: string # Valid operators are In, NotIn, Exists and DoesNotExist.
          values:
            - example-value1
            - example-value2
      matchLabels:
        key1: value1
        key2: value2
----

The secret or configmap must meet the following requirements:

. It must be in the `fleet-default` namespace where the Cluster object exists.
. It must have the annotation `rke.cattle.io/object-authorized-for-clusters: cluster-name1,cluster-name2`, which permits the target clusters to use it.

[TIP]
====

Rancher Dashboard provides an easy-to-use form for creating the secret or configmap.
====


Example:

[,yaml]
----
apiVersion: v1
data:
  audit-policy: >-
    IyBMb2cgYWxsIHJlcXVlc3RzIGF0IHRoZSBNZXRhZGF0YSBsZXZlbC4KYXBpVmVyc2lvbjogYXVkaXQuazhzLmlvL3YxCmtpbmQ6IFBvbGljeQpydWxlczoKLSBsZXZlbDogTWV0YWRhdGE=
kind: Secret
metadata:
  annotations:
    rke.cattle.io/object-authorized-for-clusters: cluster1
  name: name1
  namespace: fleet-default
----
